<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProofOfTraining</string>
    <string name="title_section">Week</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_info">Info</string>
    <string name="action_activity_add">Add activity</string>
    <string name="leave">leave</string>
    <string name="sick">sick</string>
    <string name="other">other</string>
    <string name="menu2_away">away</string>
    <string name="activity_hours_hint">1</string>
    <string name="activity_delete">delete</string>
    <string name="activity_activity_hint">activity description</string>
    <string name="action_change_workweek">Change workweek</string>
    <string name="hours_h">h</string>
    <string name="menu2_away_present">present</string>
    <string name="activity_activity_away">away</string>

</resources>
